--- a/style.css
+++ b/style.css
@@ -1,3 +1,34 @@
 body {
+    padding: 0;
+    margin: 0;
     background: lightgrey;
+}
+.navbar {
+    background: rgb(22, 22, 22);
+
+}
+.navbar-brand{
+    color: white;
+    font: bold 30px Arial;
+}
+.nav-brand, 
+.nav-link {
+    color: black;
+    cursor: pointer;
+}
+.nav-link {
+    margin-right: 1em !important;
+    border: 2px solid black;
+    color: white;
+    background: green;
+}
+.nav-link:hover {
+    background: coral;
+}
+.navbar-collapse {
+    justify-content: flex-end;
+}
+.header {
+    background-image: url("images/purple.jpg");
+    height: 20px;
 }
